--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=0
 eureka.client.service-url.default-zone= http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.int}
