eureka renewal treshold decreased

--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 eureka.instance.hostname=localhost
+eureka.instance.appname=DiscoveryService
+eureka.instance.instance-id=Discovery-Service
 server.port=8761
 eureka.server
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.server.enable-self-preservation=true
+eureka.server.renewal-percent-threshold=0.6
+eureka.instance.lease-expiration-duration-in-seconds=60
