--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=create-drop
-
 server.port=0
-eureka.client.service-url.default-zone= http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.int}
