--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=update
-
 server.port=8081
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.default-zone= http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
