--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka,http://localhost:8762/eureka,http://localhost:8763/eureka
