--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,21 +1,42 @@
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka,http://localhost:8762/eureka,http://localhost:8763/eureka
 spring.application.name=api-gateway
+eureka.instance.hostname=localhost
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka,http://localhost:8762/eureka,http://localhost:8763/eureka
+spring.cloud.gateway.discovery.locator.enabled=true
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway = TRACE
 
+
 ##Product Service
 spring.cloud.gateway.routes[0].id=product-service
-spring.cloud.gateway.routes[0].uri=lb:/product-service
-spring.cloud.gateway.routes[0].predicates[0]= Path=/api/product
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
 
 ##Order Service
 spring.cloud.gateway.routes[1].id=order-service
-spring.cloud.gateway.routes[1].uri=lb:/order-service
-spring.cloud.gateway.routes[1].predicates[0]= Path=/api/order
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
 
 ##Inventory Service
 spring.cloud.gateway.routes[2].id=inventory-service
-spring.cloud.gateway.routes[2].uri=lb:/inventory-service
-spring.cloud.gateway.routes[2].predicates[0]= Path=/api/inventory
+spring.cloud.gateway.routes[2].uri=lb://inventory-service
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/inventory
+
+##Discovery Service## ##### Only for development #####
+spring.cloud.gateway.routes[3].id=discovery-service-static-1
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/d1/**
+spring.cloud.gateway.routes[3].filters[0]=SetPath=/
+
+spring.cloud.gateway.routes[4].id=discovery-service-static-2
+spring.cloud.gateway.routes[4].uri=http://localhost:8762
+spring.cloud.gateway.routes[4].predicates[0]=Path=/d2/**
+spring.cloud.gateway.routes[4].filters[0]=SetPath=/
+
+spring.cloud.gateway.routes[5].id=discovery-service-static-3
+spring.cloud.gateway.routes[5].uri=http://localhost:8763
+spring.cloud.gateway.routes[5].predicates[0]=Path=/d3/**
+spring.cloud.gateway.routes[5].filters[0]=SetPath=/
+
