--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8761
+spring.application.name=discovery-service
+eureka.instance.instance-id=${spring.application.name}:${random.int}
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka,http://localhost:8762/eureka,http://localhost:8763/eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
