--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=order-service
+eureka.instance.hostname=localhost
+
 spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
